(fix): new links

--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
 			<h2>Últimos trabalhos</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="assets/projects/MarioJump/index.html" target="_blank" class="image fit thumb"><img
+					<a href="https://lopesls.github.io/DesenvolvimentoWeb/MarioJump" target="_blank" class="image fit thumb"><img
 							src="assets/images/01.jpg" alt="" /></a>
 					<h3>Mário Jump</h3>
 					<p>Projeto de um jogo apenas com HTML CSS e JS.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="assets/projects/SinglePage/index.html" target="_blank" class="image fit thumb"><img
+					<a href="https://lopesls.github.io/DesenvolvimentoWeb/SinglePage" target="_blank" class="image fit thumb"><img
 							src="assets/images/02.jpg" alt="" /></a>
 					<h3>Single Page</h3>
 					<p>Card interativo com frente e verso.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="assets/projects/Cadastro/index.html" target="_blank" class="image fit thumb"><img
+					<a href="https://lopesls.github.io/DesenvolvimentoWeb/CadastraUser" target="_blank" class="image fit thumb"><img
 							src="assets/images/03.jpg" alt="" /></a>
 					<h3>Cadastro de Usuários</h3>
 					<p>
@@ -145,7 +145,7 @@
 					</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="assets/projects/Locadora/index.html" target="_blank" class="image fit thumb"><img
+					<a href="https://lopesls.github.io/DesenvolvimentoWeb/Locadora" target="_blank" class="image fit thumb"><img
 							src="assets/images/04.jpg" alt="" /></a>
 					<h3>Locadora</h3>
 					<p>
@@ -154,7 +154,7 @@
 					</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="assets/projects/Biblioteca/index.html" target="_blank" class="image fit thumb"><img
+					<a href="https://lopesls.github.io/DesenvolvimentoWeb/Biblioteca" target="_blank" class="image fit thumb"><img
 							src="assets/images/05.jpg" alt="" /></a>
 					<h3>Biblioteca</h3>
 					<p>Um site que armazena algumas informações sobre alguns livros.</p>
@@ -184,7 +184,7 @@
 				<div class="col-8 col-12-small">
 					<form method="post" action="https://formsubmit.co/51a02fedb4b6f8e7919a071ad0e80fa8 ">
 						<input type="hidden" name="_next"
-							value="https://lopesls.github.io/DesenvolvimentoWeb/Projeto15-(Portfolio)/sucess.html" />
+							value="https://lopesauth.github.io/Lopesfolio/sucess.html" />
 						<input type="hidden" name="_subject" value="Portfolio Messages" />
 						<input type="hidden" name="_captcha" value="true" />
 						<input type="text" name="_honey" style="display: none" />
