--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
 							class="label">Discord</span></a>
 				</li>
 				<li>
-					<a href="mailto:lopes.carlos.host@gmail.com" class="icon solid fa-envelope"><span
-							class="label">Email</span></a>
+					<a href="https://www.linkedin.com/in/lopeslsdev/" class="icon brands fa-linkedin"><span
+							class="label">Linkedin</span></a>
 				</li>
 			</ul>
 			<ul class="copyright">
