(refactor): better coesion

--- a/index.html
+++ b/index.html
@@ -42,17 +42,12 @@
 				<span id="readMore">
 					<br /><br />
 					Sou um entusiasta de jogos, e sempre me fascinou a combinação de
-					tecnologia, criatividade e diversão que os jogos proporcionam. Ao
-					longo dos anos, através de diversos projetos e experimentos com a
-					produção de jogos, desenvolvi uma habilidade especial para
-					compreender os elementos técnicos e criativos que fazem os jogos
-					funcionarem. E hoje em dia consigo aplicar estes conhecimentos em
-					meus novos projetos para garantir uma melhor <strong>UI e UX</strong>.<br /><br />
+					tecnologia, criatividade e diversão que os jogos proporcionam.<br /><br />
 
 					Além de games, sou um ávido programador, sempre buscando aprender
 					novas linguagens e ferramentas para expandir minhas habilidades e
 					conhecimentos. Estou familiarizado com uma ampla gama de tecnologias
-					de desenvolvimento web, incluindo <strong>HTML, CSS, Bootsrap, JavaScript, Python,
+					de desenvolvimento web, incluindo <strong>HTML, CSS, Bootstrap, JavaScript, Python,
 					Ruby, React</strong> e muitas outras.<br /><br />
 
 					Estou sempre em busca de novos desafios e oportunidades para
