(refactor): better texts

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
-	<link rel="shortcut icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
-	<link rel="manifest" href="/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png" />
+	<link rel="shortcut icon" href="assets/images/favicon/favicon.ico" type="image/x-icon" />
+	<link rel="manifest" href="/site.webmanifest" />
 </head>
 
 <body class="is-preload">
@@ -47,8 +47,9 @@
 					Além de games, sou um ávido programador, sempre buscando aprender
 					novas linguagens e ferramentas para expandir minhas habilidades e
 					conhecimentos. Estou familiarizado com uma ampla gama de tecnologias
-					de desenvolvimento web, incluindo <strong>HTML, CSS, Bootstrap, JavaScript, Python,
-					Ruby, React</strong> e muitas outras.<br /><br />
+					de desenvolvimento web, incluindo
+					<strong>HTML, CSS, Bootstrap, JavaScript, Python, Ruby, React</strong>
+					e muitas outras.<br /><br />
 
 					Estou sempre em busca de novos desafios e oportunidades para
 					aprender e crescer. Se você precisa de um desenvolvedor apaixonado
@@ -80,33 +81,66 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td class="align-center"><i class="fa-brands fa-html5 html"></i> + <i class="fa-brands fa-css3-alt css"></i></td>
-							<td>Atuo no Front-End trabalhando em lindos Landing Pages e Websites construídos com HTML e CSS.</td>
+							<td class="align-center">
+								<i class="fa-brands fa-html5 html"></i> +
+								<i class="fa-brands fa-css3-alt css"></i>
+							</td>
+							<td>
+								Atuo no Front-End trabalhando em lindos Landing Pages e
+								Websites construídos com HTML e CSS.
+							</td>
 						</tr>
 						<tr>
-							<td class="align-center"><i class="fa-brands fa-bootstrap bootstrap"></i></td>
-							<td>Realizo uma melhoria do CSS com os estilos padrões do Bootstrap.</td>
+							<td class="align-center">
+								<i class="fa-brands fa-bootstrap bootstrap"></i>
+							</td>
+							<td>
+								Realizo uma melhoria do CSS com os estilos padrões do
+								Bootstrap.
+							</td>
 						</tr>
 						<tr>
-							<td class="align-center"><i class="fa-brands fa-react react"></i></td>
+							<td class="align-center">
+								<i class="fa-brands fa-react react"></i>
+							</td>
 							<td>Consigo construir UI's utilizando ReactJs.</td>
 						</tr>
 						<tr>
-							<td class="align-center"><i class="fa-brands fa-python python"></i></td>
-							<td>Sei criar interfaces gráficas, automatizo e resolvo problemas com scripts programando em Python.</td>
+							<td class="align-center">
+								<i class="fa-brands fa-python python"></i>
+							</td>
+							<td>
+								Sei criar interfaces gráficas, automatizo e resolvo problemas
+								com scripts programando em Python.
+							</td>
 						</tr>
 						<tr>
-							<td class="align-center"><i class="fa-brands fa-square-js js"></i></td>
-							<td>Com javascript controlo a intereção da página, desde um clique de um botão até o scroll que temos nesse site.</td>
+							<td class="align-center">
+								<i class="fa-brands fa-square-js js"></i>
+							</td>
+							<td>
+								Com javascript controlo a intereção da página, desde um clique
+								de um botão até o scroll que temos nesse site.
+							</td>
 						</tr>
 						<tr>
-							<td class="align-center"><i class="fa-brands fa-node-js nodejs"></i></td>
-							<td>Consigo criar APIs RESTful e fornecer acesso aos dados de um aplicativo da Web.</td>
+							<td class="align-center">
+								<i class="fa-brands fa-node-js nodejs"></i>
+							</td>
+							<td>
+								Consigo criar APIs RESTful e fornecer acesso aos dados de um
+								aplicativo da Web.
+							</td>
 							<td></td>
 						</tr>
 						<tr>
-							<td class="align-center"><i class="fa-brands fa-git-alt git"></i></td>
-							<td>Conhecimentos avançados de git pudendo trabalhar em um projeto de open source.</td>
+							<td class="align-center">
+								<i class="fa-brands fa-git-alt git"></i>
+							</td>
+							<td>
+								Conhecimentos avançados de git podendo trabalhar em um projeto
+								open source.
+							</td>
 							<td></td>
 						</tr>
 					</tbody>
@@ -131,8 +165,8 @@
 					<p>Card interativo com frente e verso.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://lopesls.github.io/DesenvolvimentoWeb/CadastraUser" target="_blank" class="image fit thumb"><img
-							src="assets/images/03.jpg" alt="" /></a>
+					<a href="https://lopesls.github.io/DesenvolvimentoWeb/CadastraUser" target="_blank"
+						class="image fit thumb"><img src="assets/images/03.jpg" alt="" /></a>
 					<h3>Cadastro de Usuários</h3>
 					<p>
 						Site que permite você cadastrar, listar e remover usuários de um
@@ -168,18 +202,18 @@
 		<section id="fourth">
 			<h2>Vamos trabalhar juntos!</h2>
 			<p>
-				Olá! Se você está procurando por um desenvolvedor web experiente e
-				dedicado, com alguns anos de experiência em desenvolvimento de sites e
-				aplicações web, capaz de construir uma presença online efetiva e de
-				alta qualidade. Entre em contato comigo, para saber mais sobre meu
-				trabalho e como posso ajudá-lo a alcançar seus objetivos de negócios
-				online. Estou ansioso para conversar com você!
+				Olá! Se você está procurando por um desenvolvedor web com alguns anos
+				de experiência em desenvolvimento de sites e aplicações web, capaz de
+				construir uma presença online efetiva e de alta qualidade. Entre em
+				contato comigo, para saber mais sobre meu trabalho e como posso
+				ajudá-lo a alcançar seus objetivos de negócios online. Estou ansioso
+				para conversar com você!
 			</p>
+
 			<div class="row">
 				<div class="col-8 col-12-small">
 					<form method="post" action="https://formsubmit.co/51a02fedb4b6f8e7919a071ad0e80fa8 ">
-						<input type="hidden" name="_next"
-							value="https://lopesauth.github.io/Lopesfolio/sucess.html" />
+						<input type="hidden" name="_next" value="https://lopesauth.github.io/Lopesfolio/sucess.html" />
 						<input type="hidden" name="_subject" value="Portfolio Messages" />
 						<input type="hidden" name="_captcha" value="true" />
 						<input type="text" name="_honey" style="display: none" />
@@ -188,13 +222,16 @@
 							<div class="col-6 col-12-xsmall">
 								<input class="blackComponent" type="text" name="name" id="name" placeholder="Nome" required />
 							</div>
+
 							<div class="col-6 col-12-xsmall">
 								<input class="blackComponent" type="email" name="email" id="email" placeholder="Email" required />
 							</div>
+
 							<div class="col-12">
 								<textarea class="blackComponent" name="message" id="message" placeholder="Mensagem" rows="4"
 									required></textarea>
 							</div>
+							
 							<div class="col-12">
 								<input type="submit" value="Enviar mensagem" />
 							</div>
@@ -240,8 +277,8 @@
 							class="label">Github</span></a>
 				</li>
 				<li>
-					<a href="https://discord.com/users/471767983014805504" target="_blank" class="icon brands fa-discord discord"><span
-							class="label">Discord</span></a>
+					<a href="https://discord.com/users/471767983014805504" target="_blank"
+						class="icon brands fa-discord discord"><span class="label">Discord</span></a>
 				</li>
 				<li>
 					<a href="https://www.linkedin.com/in/lopeslsdev/" class="icon brands fa-linkedin"><span
