(feat): button to top

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body class="is-preload">
+	<!-- TopButton -->
+	<div id="buttonUp">
+		<i class="arrow up"></i>
+	</div>
+	
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
@@ -26,6 +31,7 @@
 
 	<!-- Main -->
 	<div id="main">
+		
 		<!-- One -->
 		<section id="one">
 			<header class="major">
@@ -297,8 +303,9 @@
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/script.js"></script>
+	<script src="assets/js/parallax.js"></script>
+	<script src="assets/js/readMore.js"></script>
+	<script src="assets/js/scrollTop.js"></script>
 </body>
 
 </html>
