(fix): link to my discord

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 							class="label">Github</span></a>
 				</li>
 				<li>
-					<a href="https://discord.com/users/471767983014805504" target="_blank"
+					<a href="https://discord.gg/ZV72P6W7ak" target="_blank"
 						class="icon brands fa-discord discord"><span class="label">Discord</span></a>
 				</li>
 				<li>
