(feat): new design concepts

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</header>
 
 			<p>
-				Sou um <strong>Desenvolvedor Web</strong> apaixonado por games, séries
+				Sou um <span class="strong">Desenvolvedor Web</span> apaixonado por games, séries
 				e linguagens de programação. Com um curso técnico em informática e
 				alguns anos de experiência em desenvolvimento web, estou sempre
 				buscando maneiras de aprimorar minhas habilidades e conhecimentos para
@@ -54,7 +54,7 @@
 					novas linguagens e ferramentas para expandir minhas habilidades e
 					conhecimentos. Estou familiarizado com uma ampla gama de tecnologias
 					de desenvolvimento web, incluindo
-					<strong>HTML, CSS, Bootstrap, JavaScript, Python, Ruby, React</strong>
+					<span class="strong">HTML, CSS, Bootstrap, JavaScript, Python, Ruby, React</span>
 					e muitas outras.<br /><br />
 
 					Estou sempre em busca de novos desafios e oportunidades para
